# verric

./: .dockerignore  .env.local.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  Dockerfile  LICENSE  README.md  demo-complete-evidence-pack-README.md  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
.github/actions/verric/: README.md  action.yml
.github/apps/verric/: README.md
.github/workflows/: ci.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.local.example  next.config.mjs  package.json
apps/web/src/app/: globals.css  page.tsx
apps/web/src/lib/: db.ts  github.ts  run-bus.ts  worker.ts
demo-complete-evidence-pack/: 01-nmap-external-scan.txt  02-burp-admin-unauthenticated-poc.http  03-burp-idor-user-export-poc.http  04-sqlmap-login-confirmed.txt  05-login-sqli-request-response.http  06-tester-notes.md
demo-evidence-pack/: 01-nmap-external-scan.txt  02-burp-admin-unauthenticated-poc.http  03-burp-idor-user-export-poc.http  04-sqlmap-login-observation.txt  05-tester-notes.md  08-api-export-response.json  README.md
deploy/: verric.cyberkunju.com.conf
docs/: 01-VISION-AND-PRODUCT.md  02-ARCHITECTURE-AND-ENGINE.md  03-INNOVATIONS-AND-COMPETITIVE-EDGE.md  README.md
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: report.ts
(+22 files in other folders)
